fix bug 29498. remove buggy hebrew hack untill the layout level support bi-di by the bi-di team. r=erik